Sat May 24 22:19:13 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkscrollbar.c (gtk_scrollbar_class_init): Make the minimum
	scrollbar slider length 21 instead of 7.

2003-05-23  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtknotebook.c: Add support for up to four scroll
	arrows. Control their display by new style properties
	"has_forward_stepper", "has_backward_stepper",
	"has_secondary_forward_stepper" and
	has_secondary_backward_stepper". (#110540)

	* gtk/gtknotebook.h (struct _GtkNotebook): Make in_child and
	click_child three bits wide, add
	has_{before,after}_{previous,next} fields.

	* gtk/gtkcolorsel.c (gtk_color_selection_init): Update color on
	focus out of hex_entry.  (#112665)
	(hex_focus_out): New signal handler for focus out of hex entry.

Wed May 21 19:01:06 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_realize): 
	g_return_if_fail() if
	GTK_WIDGET_ANCHORED (widget) || GTK_IS_INVISIBLE (widget).
	(#107872, Christian Reis)

2003-05-22  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkfilesel.c (gtk_file_selection_create_dir): 
	(gtk_file_selection_rename_file): Some keynav improvements for the
	"Rename File" and "Create Directory" subdialogs: Enter in entry
	activates default, default is "Create"/"Rename", Escape cancels
	dialog.  (#113110)
	(gtk_file_selection_set_filename): Add a hint about opening 
	directories.  (#113175)

2003-05-22  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkdrawable-x11.c (gdk_x11_drawable_update_xft_clip):
	Use XftDrawSetClipRectangles(), since we're inside HAVE_XFT2
	anyway.  (#113476)

Wed May 21 15:53:14 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkprogress.c (gtk_progress_set_format_string,
	gtk_progress_set_show_text): Always queue a resize ... 
	we rely on the size-allocate to do the update, plus a 
	different format can actually change our size requisition.
	(#111052, Vasco Alexandre da Silva Costa)

	* gtk/gtkprogress.c (gtk_progress_changed): Track