@@ -17,7 +17,7 @@ EOF
 
 zip $ZIP lib/gtk-2.0/@GTK_BINARY_VERSION@/loaders/*.dll lib/gtk-2.0/@GTK_BINARY_VERSION@/immodules/*.dll
 
-zip $ZIP share/themes/*/gtk-2.0/gtkrc share/themes/*/gtk-2.0-key/gtkrc
+zip $ZIP share/themes/{Default,Emacs}/gtk-2.0{,-key}/gtkrc
 
 zip -r $ZIP lib/locale/*/LC_MESSAGES/gtk20.mo
 
@@ -43,5 +43,8 @@ lib/pkgconfig/gtk+-2.0.pc
 lib/pkgconfig/gtk+-win32-2.0.pc
 share/aclocal/gtk-2.0.m4
 share/gtk-2.0
+share/gtk-doc/html/gdk-pixbuf
+share/gtk-doc/html/gdk
+share/gtk-doc/html/gtk
 EOF
 
